[project]
name = "mortgage_bot"
version = "0.1.0"
description = "RAG agent with Supabase integration for the mortgage industry"
authors = [
    { name="Marco Berta", email="info@marco-berta.com" }
]
requires-python = ">=3.10"

[project.dependencies]
docling >= "2.51.0"
openai >= "1.107.0"
pydantic >= "2.11.7"
supabase >= "2.18.1"

[tool.setuptools]
packages = ["."]
